--- a/Poing/WebContent/owner/css/matrix-style.css
+++ b/Poing/WebContent/owner/css/matrix-style.css
@@ -53,13 +53,13 @@ hr{ border-top-color:#dadada;}
 	z-index: -9;
 }
 #header h1 {
-	background: url("../img/logo.png") no-repeat scroll 0 0 transparent;
-	height: 31px;
+	background: url("../img/logo_owner.png") no-repeat scroll 0 0 transparent;
+	height: 50px;
 	left: 20px;
 	line-height: 600px;
 	overflow: hidden;
 	position: relative;
-	top: 26px;
+	top: 5px;
 	width: 191px;
 }
 #header h1 a {
